--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -5,8 +5,8 @@
   /*Color mode HSL(hue, saturation, lightness)*/
   --first-color: #ffd700;
   --first-color-alt: #ffec00;
-  --second-color: hsl(355, 90%, 55%);
-  --third-color: hsl(198, 90%, 65%);
+  --second-color: #ff6347;
+  --third-color: #587b4c;
   --title-color: hsl(0, 0%, 12%);
   --text-color: hsl(0, 0%, 75%);
   --text-color-light: hsl(0, 0%, 65%);
