--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,8 +4,8 @@
   /*Color mode HSL(hue, saturation, lightness)*/
   --first-color: #ffd700;
   --first-color-alt: #ffec00;
-  --second-color: hsl(355, 90%, 55%);
-  --third-color: hsl(198, 90%, 65%);
+  --second-color: #ff6347;
+  --third-color: #587b4c;
   --title-color: hsl(0, 0%, 12%);
   --text-color: hsl(0, 0%, 75%);
   --text-color-light: hsl(0, 0%, 65%);
@@ -45,6 +45,8 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--white-color);
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 ul {
@@ -63,13 +65,30 @@ img {
 
 button {
   cursor: pointer;
-  color: var(--white-color);
 }
 
-/*=============== REUSABLE CSS CLASSES ===============*/
+.hidden {
+  display: none;
+}
+
 .container {
   max-width: 1120px;
   margin-inline: 1.5rem;
+}
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
+.section {
+  padding-block: 5rem 1rem;
+}
+.section__title {
+  font-size: var(--biggest-font-size);
+  font-family: var(--second-font);
+  text-align: center;
+  margin-block: 0.5rem;
 }
 
 .main {
@@ -144,8 +163,7 @@ button {
 }
 .nav__social {
   display: flex;
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
+  column-gap: 0.5rem;
   align-self: flex-end;
 }
 .nav__social-link {
@@ -157,17 +175,31 @@ button {
   color: var(--first-color);
 }
 
-/* Show menu */
 .show-menu {
   left: 0;
 }
 
-/* Background header */
+.blur-header::after {
+  content: "";
+  position: absolute;
+  width: 1000%;
+  height: 100%;
+  background-color: hsla(0, 0%, 6%, 0.2);
+  backdrop-filter: blur(16px);
+  -webkit-backdrop-filter: blur(16px);
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 .bg-header {
   box-shadow: 0 2px 16px hsla(0, 0%, 0%, 0.1);
 }
 
-/*=============== HOME ===============*/
+.active-link {
+  color: var(--first-color);
+}
+
 .home__container, .home__data, .home__article, .home__images, .home__footer {
   display: grid;
 }
@@ -179,7 +211,9 @@ button {
   text-align: center;
 }
 .home__subtitle {
-  font-size: var(--small-font-size);
+  font-size: var(--normal-font-size);
+  font-family: var(--second-font);
+  color: var(--first-color);
 }
 .home__titles {
   margin-block: 0.5rem 2rem;
@@ -196,8 +230,7 @@ button {
 .home__button {
   justify-self: center;
   align-items: center;
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
+  column-gap: 0.5rem;
   font-weight: var(--font-semi-bold);
   color: var(--first-color);
   padding-top: 1rem;
@@ -237,13 +270,14 @@ button {
 .home__img-1, .home__img-2 {
   position: absolute;
   width: 200px;
+  border-radius: 5px;
   filter: drop-shadow(0 20px 12px hsla(0, 0%, 0%, 0.4));
   transition: transform 0.7s 0.1s cubic-bezier(0.2, 0.9, 0.3, 1.3), opacity 0.3s;
 }
 .home__img-1 {
   bottom: 7rem;
   left: -1.5rem;
-  transform: translateX(-5rem) rotate(60deg);
+  transform: translateX(-5rem) rotate(80deg);
   opacity: 0;
 }
 .home__img-2 {
@@ -257,8 +291,7 @@ button {
 }
 .home__social {
   justify-content: center;
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
+  column-gap: 0.5rem;
 }
 .home__social-link {
   color: var(--white-color);
@@ -328,13 +361,251 @@ button {
   opacity: 1;
 }
 
-/*=============== SCROLL BAR ===============*/
+.footer {
+  padding-block: 3rem 2rem;
+}
+.footer__container {
+  position: relative;
+  row-gap: 4rem;
+}
+.footer__logo {
+  display: inline-block;
+  color: var(--first-color);
+  font-size: var(--big-font-size);
+  font-family: var(--second-font);
+  margin-bottom: 0.5rem;
+  transition: color 0.4s;
+}
+.footer__logo:hover {
+  color: var(--first-color-alt);
+}
+.footer__content {
+  grid-template-columns: repeat(2, max-content);
+  gap: 4rem 2rem;
+}
+.footer__title {
+  font-size: var(--h3-font-size);
+  margin-bottom: 1.25rem;
+}
+.footer__list {
+  display: grid;
+  row-gap: 0.75rem;
+}
+.footer__info {
+  font-style: normal;
+}
+.footer__social {
+  display: flex;
+  column-gap: 1rem;
+}
+.footer__social a {
+  color: var(--text-color);
+  font-size: 1.5rem;
+  transition: color 0.4s;
+}
+.footer__social a:hover {
+  color: var(--first-color);
+}
+.footer__img-1, .footer__img-2 {
+  position: absolute;
+}
+.footer__img-1 {
+  width: 60px;
+  top: 2.5rem;
+  right: 1.5rem;
+}
+.footer__img-2 {
+  width: 70px;
+  top: 17rem;
+  left: 9rem;
+}
+.footer__copy {
+  display: block;
+  margin-top: 6rem;
+  text-align: center;
+  font-size: var(--small-font-size);
+}
+
+@media screen and (max-width: 340px) {
+  .home__footer {
+    flex-direction: column;
+    row-gap: 2rem;
+  }
+  .footer__content {
+    grid-template-columns: max-content;
+  }
+}
+@media screen and (min-width: 576px) {
+  .footer__content {
+    grid-template-columns: repeat(4, max-content);
+  }
+}
+@media screen and (min-width: 768px) {
+  .home__footer {
+    grid-column: 1/3;
+  }
+}
+@media screen and (min-width: 1150px) {
+  .footer {
+    padding-block: 5rem 3rem;
+  }
+  .footer__logo, .footer__title {
+    margin-bottom: 1.5rem;
+  }
+  .footer__content {
+    column-gap: 4.5rem;
+  }
+  .footer__social {
+    column-gap: 1.5rem;
+  }
+  .footer__copy {
+    margin-top: 8rem;
+  }
+}
+.gallery__container {
+  position: relative;
+  height: 100%;
+}
+.gallery .swiper {
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 100px;
+}
+.gallery .swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+.gallery .swiper-slide img {
+  display: block;
+  width: 100%;
+  border: 2px solid white;
+  border-radius: 10px;
+}
+
+.visit__container {
+  position: relative;
+  padding-block: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2rem;
+}
+.visit__container img {
+  opacity: 0.6;
+}
+.visit__bg, .visit__shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+.visit__bg {
+  object-fit: cover;
+  object-position: center;
+}
+.visit__shadow {
+  background: linear-gradient(180deg, hsl(0, 0%, 6%) 0%, hsla(0, 0%, 4%, 0.1) 50%, hsl(0, 0%, 6%) 100%);
+}
+.visit__data {
+  text-align: center;
+}
+.visit__description {
+  font-size: var(--h2-font-size);
+  margin-bottom: 2rem;
+}
+.visit__iframe {
+  height: 400px;
+  width: 600px;
+  margin-top: 2rem;
+  -webkit-animation: slide-in-fwd-top 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-in-fwd-top 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2024-3-19 10:51:49
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+/**
+ * ----------------------------------------
+ * animation slide-in-fwd-top
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-in-fwd-top {
+  0% {
+    -webkit-transform: translateZ(-1400px) translateY(-800px);
+    transform: translateZ(-1400px) translateY(-800px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-fwd-top {
+  0% {
+    -webkit-transform: translateZ(-1400px) translateY(-800px);
+    transform: translateZ(-1400px) translateY(-800px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+.button {
+  color: var(--first-color);
+  font-size: var(--h2-font-size);
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  transition: transform 0.4s;
+}
+.button i {
+  font-size: 1.5rem;
+  margin-left: 0.5rem;
+  transition: color 0.4s;
+}
+.button:hover {
+  transform: translateX(1rem);
+}
+
 ::-webkit-scrollbar {
   width: 0.6rem;
-  background-color: hsl(0, 0%, 70%);
+  background-color: var(--body-color);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: hsl(0, 0%, 60%);
+  background-color: var(--body-color);
+}
+
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--body-color);
+  border: 2px solid var(--first-color);
+  border-radius: 5px;
+  color: var(--first-color);
+  display: inline-flex;
+  padding: 6px;
+  font-size: 1.25rem;
+  z-index: var(--z-tooltip);
+  transition: bottom 0.4s, transform 0.4s;
+}
+.scrollup:hover {
+  transform: translateY(-0.5rem);
+}
+
+.show-scroll {
+  bottom: 3rem;
 }
 
 /*=============== BREAKPOINTS ===============*/
@@ -366,8 +637,7 @@ button {
   }
   .home__controls {
     flex-direction: row;
-    -moz-column-gap: 2rem;
-         column-gap: 2rem;
+    column-gap: 2rem;
   }
   .home__navigation {
     order: -1;
@@ -386,22 +656,19 @@ button {
     font-size: var(--normal-font-size);
   }
   .nav__social {
-    -moz-column-gap: 1rem;
-         column-gap: 1rem;
+    column-gap: 1rem;
   }
   .nav__social-link {
     color: var(--white-color);
   }
   .nav__menu {
     display: flex;
-    -moz-column-gap: 3rem;
-         column-gap: 3rem;
+    column-gap: 3rem;
     align-items: center;
   }
   .nav__list {
     flex-direction: row;
-    -moz-column-gap: 3rem;
-         column-gap: 3rem;
+    column-gap: 3rem;
   }
 }
 @media screen and (min-width: 1150px) {
@@ -413,8 +680,7 @@ button {
     grid-template-rows: 470px;
     align-items: center;
     justify-content: center;
-    -moz-column-gap: 2rem;
-         column-gap: 2rem;
+    column-gap: 2rem;
     row-gap: 6rem;
     padding-top: 12rem;
   }
@@ -447,15 +713,16 @@ button {
     height: 570px;
   }
   .home__img-1, .home__img-2 {
-    width: 420px;
+    width: 350px;
+    z-index: 100;
   }
   .home__img-1 {
-    bottom: 14rem;
+    bottom: 6rem;
     left: -3rem;
     transform: translateX(-25rem) rotate(60deg);
   }
   .home__img-2 {
-    bottom: 6rem;
+    bottom: 4rem;
     right: -3rem;
     transform: translateX(25rem) rotate(60deg);
   }
@@ -463,4 +730,4 @@ button {
   .swiper-button-next {
     font-size: 1.5rem;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
