--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -9,6 +9,8 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--white-color);
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 ul {
@@ -27,5 +29,8 @@ img {
 
 button {
   cursor: pointer;
-  color: var(--white-color);
+}
+
+.hidden {
+  display: none;
 }
