--- a/assets/scss/components/_home.scss
+++ b/assets/scss/components/_home.scss
@@ -1,4 +1,3 @@
-/*=============== HOME ===============*/
 .home {
   &__container,
   &__data,
@@ -7,6 +6,7 @@
   &__footer {
     display: grid;
   }
+
   &__container {
     padding-block: 7.5rem 2.5rem;
     row-gap: 1.5rem;
@@ -15,7 +15,9 @@
     text-align: center;
   }
   &__subtitle {
-    font-size: var(--small-font-size);
+    font-size: var(--normal-font-size);
+    font-family: var(--second-font);
+    color: var(--first-color);
   }
   &__titles {
     margin-block: 0.5rem 2rem;
@@ -78,6 +80,7 @@
   &__img-2 {
     position: absolute;
     width: 200px;
+    border-radius: 5px;
     filter: drop-shadow(0 20px 12px hsla(0, 0%, 0%, 0.4));
     transition: transform 0.7s 0.1s cubic-bezier(0.2, 0.9, 0.3, 1.3),
       opacity 0.3s;
@@ -85,7 +88,7 @@
   &__img-1 {
     bottom: 7rem;
     left: -1.5rem;
-    transform: translateX(-5rem) rotate(60deg);
+    transform: translateX(-5rem) rotate(80deg);
     opacity: 0;
   }
   &__img-2 {
