--- a/assets/scss/components/_scroll.scss
+++ b/assets/scss/components/_scroll.scss
@@ -1,9 +1,31 @@
-/*=============== SCROLL BAR ===============*/
-::-webkit-scrollbar{
-   width: .6rem;
-   background-color: hsla(0, 0%, 70%);
-   
-   &-thumb{
-      background-color: hsl(0, 0%, 60%);
-   }
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background-color: var(--body-color);
+
+  &-thumb {
+    background-color: var(--body-color);
+  }
+}
+
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--body-color);
+  border: 2px solid var(--first-color);
+  border-radius: 5px;
+  color: var(--first-color);
+  display: inline-flex;
+  padding: 6px;
+  font-size: 1.25rem;
+  z-index: var(--z-tooltip);
+  transition: bottom 0.4s, transform 0.4s;
+
+  &:hover {
+    transform: translateY(-0.5rem);
+  }
+}
+
+.show-scroll {
+  bottom: 3rem;
 }
