--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,7 +1,11 @@
-@import 'config/variables';
-@import 'base/base';
-@import 'layout/layout';
-@import 'components/header';
-@import 'components/home';
-@import 'components/scroll';
-@import 'components/breakpoints';
+@import "config/variables";
+@import "base/base";
+@import "layout/layout";
+@import "components/header";
+@import "components/home";
+@import "components/footer";
+@import "components/gallery";
+@import "components/visit";
+@import "components/button";
+@import "components/scroll";
+@import "components/breakpoints";
